--- a/frontend/pages/about.html
+++ b/frontend/pages/about.html
@@ -148,19 +148,11 @@
                     </p>
                 </div>
 
-<<<<<<< HEAD
                 <!-- instructors -->
                 <div class="flex flex-col gap-8 justify-center items-center">
                     <!-- mauricio -->
-=======
-
-                <div class="flex flex-col gap-8 justify-center items-center">
-                    <!-- mauricio gomez -->
->>>>>>> 8290479d06063a46590de6679604f62fb22a7850
                     <div class="w-full bg-light-brown">
-                        <div class="max-w-[1400px] mx-auto px-6 py-10
-                                    flex flex-col md:flex-row gap-10
-                                    justify-center items-center">
+                        <div class="max-w-[1400px] mx-auto px-6 py-10 flex flex-col md:flex-row gap-10 justify-center items-center">
 
                             <div class="md:w-1/3">
                                 <h3 class="text-3xl font-semibold text-[#886551]">
@@ -183,16 +175,9 @@
                         </div>
                     </div>
 
-<<<<<<< HEAD
                     <!-- sarah -->
-=======
-                    <!-- sarah nova -->
->>>>>>> 8290479d06063a46590de6679604f62fb22a7850
                     <div class="w-full bg-white">
-                        <div class="max-w-[1400px] mx-auto px-6 py-10
-                                    min-h-[220px] md:min-h-[200px]
-                                    flex flex-col md:flex-row gap-10
-                                    justify-center items-center">
+                        <div class="max-w-[1400px] mx-auto px-6 py-10 min-h-[220px] md:min-h-[200px] flex flex-col md:flex-row gap-10 justify-center items-center">
 
                             <div class="md:w-1/3">
                                 <h3 class="text-3xl font-semibold text-[#886551]">
@@ -212,16 +197,9 @@
                         </div>
                     </div>
 
-<<<<<<< HEAD
-                    <!-- guy -->
-=======
                     <!-- guy victory -->
->>>>>>> 8290479d06063a46590de6679604f62fb22a7850
                     <div class="w-full bg-light-brown">
-                        <div class="max-w-[1400px] mx-auto px-6 py-10
-                                    min-h-[220px] md:min-h-[200px]
-                                    flex flex-col md:flex-row gap-10
-                                    justify-center items-center">
+                        <div class="max-w-[1400px] mx-auto px-6 py-10 min-h-[220px] md:min-h-[200px] flex flex-col md:flex-row gap-10 justify-center items-center">
 
                             <div class="md:w-1/3">
                                 <h3 class="text-3xl font-semibold text-[#886551]">
@@ -234,24 +212,17 @@
 
                             <div class="md:w-2/3 text-stone-700 text-lg leading-relaxed">
                                 <ul class="list-disc ml-5 space-y-1">
-                                    <li>2nd Dan Blackbelt – Jiu-Jitsu</li>
-                                    <li>1st Dan Blackbelt – Judo</li>
+                                    <li>2nd Dan Blackbelt - Jiu-Jitsu</li>
+                                    <li>1st Dan Blackbelt - Judo</li>
                                 </ul>
                             </div>
 
                         </div>
                     </div>
 
-<<<<<<< HEAD
                     <!-- morris -->
-=======
-                    <!-- morris davis -->
->>>>>>> 8290479d06063a46590de6679604f62fb22a7850
                     <div class="w-full bg-white">
-                        <div class="max-w-[1400px] mx-auto px-6 py-10
-                                    min-h-[220px] md:min-h-[200px]
-                                    flex flex-col md:flex-row gap-10
-                                    justify-center items-center">
+                        <div class="max-w-[1400px] mx-auto px-6 py-10 min-h-[220px] md:min-h-[200px] flex flex-col md:flex-row gap-10 justify-center items-center">
 
                             <div class="md:w-1/3">
                                 <h3 class="text-3xl font-semibold text-[#886551]">
@@ -265,23 +236,16 @@
                             <div class="md:w-2/3 text-stone-700 text-lg leading-relaxed">
                                 <ul class="list-disc ml-5 space-y-1">
                                     <li>Accredited Muay Thai Coach</li>
-                                    <li>3rd Dan Blackbelt – Karate</li>
+                                    <li>3rd Dan Blackbelt - Karate</li>
                                 </ul>
                             </div>
 
                         </div>
                     </div>
 
-<<<<<<< HEAD
                     <!-- traci -->
-=======
-                    <!-- traci santiago -->
->>>>>>> 8290479d06063a46590de6679604f62fb22a7850
                     <div class="w-full bg-light-brown">
-                        <div class="max-w-[1400px] mx-auto px-6 py-10
-                                    min-h-[220px] md:min-h-[200px]
-                                    flex flex-col md:flex-row gap-10
-                                    justify-center items-center">
+                        <div class="max-w-[1400px] mx-auto px-6 py-10 min-h-[220px] md:min-h-[200px] flex flex-col md:flex-row gap-10justify-center items-center">
 
                             <div class="md:w-1/3">
                                 <h3 class="text-3xl font-semibold text-[#886551]">
@@ -305,10 +269,7 @@
 
                     <!-- harpreet kaur -->
                     <div class="w-full bg-white">
-                        <div class="max-w-[1400px] mx-auto px-6 py-10
-                                    min-h-[220px] md:min-h-[200px]
-                                    flex flex-col md:flex-row gap-10
-                                    justify-center items-center">
+                        <div class="max-w-[1400px] mx-auto px-6 py-10 min-h-[220px] md:min-h-[200px] flex flex-col md:flex-row gap-10 justify-center items-center">
 
                             <div class="md:w-1/3">
                                 <h3 class="text-3xl font-semibold text-[#886551]">
