--- a/frontend/pages/services.html
+++ b/frontend/pages/services.html
@@ -19,7 +19,7 @@
         <nav class="bg-white text-black flex justify-between items-center ">
             
             <!--company logo -->
-            <a href="../../index.html"><img src="../assets/company-icon-img.PNG" alt="Logo" class="h-22 ml-8"></a>
+            <a href="../../index.html"><img src="../assets/company-icon-img.png" alt="Logo" class="h-22 ml-8"></a>
             
 
             <!-- hamburger icon -->
@@ -271,4 +271,5 @@
         </footer>
     </main>
 </body>
+
 </html>
