Refactor membership.html for improved structure and styles
Updated HTML structure and styling for the membership page. Changed image source and corrected class names for better styling.

--- a/frontend/pages/membership.html
+++ b/frontend/pages/membership.html
@@ -18,7 +18,7 @@
         <nav class="bg-white text-black flex justify-between items-center ">
             
             <!--company logo -->
-            <a href="../../index.html"><img src="../assets/company-icon-img.PNG" alt="Logo" class="h-22 ml-8"></a>
+            <a href="../../index.html"><img src="../assets/company-icon-img.png" alt="Logo" class="h-22 ml-8"></a>
             
 
             <!-- hamburger icon -->
@@ -223,4 +223,5 @@
     </footer>
 </body>
 </html>
+
 <!--  icons - https://www.piliapp.com/symbol/bullet-point/(no longer used in final design - used tailwind heroicons)-->
