--- a/frontend/pages/about.html
+++ b/frontend/pages/about.html
@@ -18,7 +18,7 @@
         <nav class="bg-white text-black flex justify-between items-center ">
             
             <!--company logo -->
-            <a href="../../index.html"><img src="../assets/company-icon-img.PNG" alt="Logo" class="h-22 ml-8"></a>
+            <a href="../../index.html"><img src="../assets/company-icon-img.png" alt="Logo" class="h-22 ml-8"></a>
             
 
             <!-- hamburger icon -->
@@ -342,3 +342,4 @@
 
 </body>
 </html>
+
